# internal/model/tag.go
@@ -1,9 +1,16 @@
 package model
 
+import "github.com/go-programming-tour-book/blog_service/pkg/app"
+
 type Tag struct {
 	*Model
 	Name  string `json:"name"`
 	State uint8  `json:"state"`
+}
+
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
 
 func (t Tag) TableName() string {
